tests/negative/gold/export_cyclic3_test.gold
tests/negative/export_cyclic3_b.toit:4:1: error: Cyclic export dependency
export *
^~~~~~
tests/negative/export_cyclic3_c.toit:4:1: note: This clause contributes to the 'export' cycle
export *
^~~~~~
tests/negative/export_cyclic3_c.toit:4:1: error: Cyclic export dependency
export *
^~~~~~
tests/negative/export_cyclic3_b.toit:4:1: note: This clause contributes to the 'export' cycle
export *
^~~~~~
tests/negative/export_cyclic3_a.toit:4:8: error: Unresolved export 'foo'
export foo
       ^~~
Compilation failed.
